# chek

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cross-windows.cmake
.github/workflows/: build-linux-x64.yml  build-windows-x64.yml
examples/: conditional.ce  conditional.cm  div_by_0.cm  empty.cm  expr.ce  expr.cm  fac.ce  fac.cm  fib.ce  fib.cm  fib2.ce  fib2.cm  funcs.cm  globals.ce  globals.cm  hello_world.cm  inline.ce  inline.cm  opt_test.cm  predeclaration.ce  print_int.cm  scoped_vars.ce  scoped_vars.cm  string_print.ce  test1.ce  test1.cm  test2.ce  test2.cm  test3.cm  while.ce
examples/errors/: global_redefined.cm  unknown_var.cm
examples/libs/: print_int.cm
src/: codegen.c  codegen.h  compiler.c  compiler.h  elf_gen.c  elf_gen.h  emit.c  emit.h  error.c  error.h  expr.c  expr.h  main.c  main.h  utils.c  utils.h
src/arch_specific/: x86_64.c  x86_64.h
src/target_specific/: elf.h  elf_gen.c  elf_gen.h  win_gen.c  win_gen.h
